--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -12,4 +12,4 @@
 = render 'story_comments/comments', :comments => @story.story_comments
 
 %h1 Add comment
-= render 'story_comments/form', :comment => @comment, :story => @story
+= render 'story_comments/form', :comment => @comment
