--- a/app/views/story_comments/_form.html.haml
+++ b/app/views/story_comments/_form.html.haml
@@ -4,7 +4,7 @@
     = f.text_area :body
 
   = f.hidden_field :author_id, :value => current_user.id
-  = f.hidden_field :story_id, :value => story.id
+  = f.hidden_field :story_id, :value => comment.story_id
 
   %div.actions
     = f.submit 'Save'
