--- a/app/views/stories/_action_buttons.html.haml
+++ b/app/views/stories/_action_buttons.html.haml
@@ -1,3 +1,2 @@
-%div.actions
-  = link_to('Edit', edit_story_path( story) )
-  = link_to('Delete', story_path( story ), method: :delete, data: { confirm: 'Are you sure?' } )
+= link_to t('.edit', :default => t("helpers.links.edit")), edit_story_path(story), :class => 'btn btn-mini'
+= link_to t('.destroy', :default => t("helpers.links.destroy")), story_path(story), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
