--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -1,17 +1,19 @@
-= form_for @story do |f|
-  %div.field
-    = f.label :title
-    = f.text_field :title
-
-  %div.field
-    = f.label :body
-    = f.text_area :body
-
-  %div.field
-    = f.label :performer_id
-    = f.select :performer_id, User.all.map{|u| [u.email, u.id]}, :include_blank => true
+= form_for @story, :html => { :class => 'form-horizontal' } do |f|
+  .control-group
+    = f.label :title, :class => 'control-label'
+    .controls
+      = f.text_field :title, :class => 'text_field'
+  .control-group
+    = f.label :body, :class => 'control-label'
+    .controls
+      = f.text_area :body, :class => 'text_field'
+  .control-group
+    = f.label :performer_id, :class => 'control-label'
+    .controls
+      = f.select :performer_id, User.all.map{|u| [u.email, u.id]}, :include_blank => true
 
   = f.hidden_field :author_id, :value => current_user.id
 
-  %div.actions
-    = f.submit 'Save'
+  .form-actions
+    = f.submit nil, :class => 'btn btn-primary'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), stories_path, :class => 'btn'
