--- a/app/views/stories/edit.html.haml
+++ b/app/views/stories/edit.html.haml
@@ -1,3 +1,4 @@
-%h1 Editing story
-
-= render 'form'
+- model_class = Story
+.page-header
+  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
+= render :partial => "form"
