--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,15 +1,44 @@
-= link_to('Back', stories_path)
+- model_class = Story
+.page-header
+  %h1=t '.title', :default => model_class.model_name.human.titleize
 
-%h1
+%p
+  %strong= model_class.human_attribute_name(:title) + ':'
+  %br
   = @story.title
+%p
+  %strong= model_class.human_attribute_name(:body) + ':'
+  %br
+  - if @story.body != ''
+    = @story.body
+  - else
+    No story body
+%p
+  %strong= model_class.human_attribute_name(:state) + ':'
+  %br
   = @story.state
+%p
+  = render 'state_buttons', :story => @story
+%p
+  %strong= model_class.human_attribute_name(:author_id) + ':'
+  %br
+  = @story.author.email if @story.author
+%p
+  %strong= model_class.human_attribute_name(:performer_id) + ':'
+  %br
+  - if @story.performer
+    = @story.performer.email
+  - else
+    No performer
 
-%div
-  = @story.body
-
-= render 'state_buttons', :story => @story
+.form-actions
+  = link_to t('.back', :default => t("helpers.links.back")), stories_path, :class => 'btn'
+  = link_to t('.edit', :default => t("helpers.links.edit")), edit_story_path(@story), :class => 'btn'
+  = link_to t('.destroy', :default => t("helpers.links.destroy")), story_path(@story), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
 
 = render 'story_comments/comments', :comments => @story.story_comments
+
+%br
 
 %h1 Add comment
 = render 'story_comments/form', :comment => @comment
