--- a/app/views/story_comments/_form.html.haml
+++ b/app/views/story_comments/_form.html.haml
@@ -1,10 +1,11 @@
-= form_for comment do |f|
-  %div.field
-    = f.label :body
-    = f.text_area :body
+= form_for comment, :html => { :class => '' } do |f|
+  .control-group
+    .controls
+      = f.text_area :body, :class => 'text_field'
 
   = f.hidden_field :author_id, :value => current_user.id
   = f.hidden_field :story_id, :value => comment.story_id
 
-  %div.actions
-    = f.submit 'Save'
+  .form-actions
+    = f.submit 'Save', :class => 'btn btn-primary'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), story_path(comment.story), :class => 'btn'
