--- a/app/views/story_comments/edit.html.haml
+++ b/app/views/story_comments/edit.html.haml
@@ -1,3 +1,4 @@
-%h1 Editing comment
-
-= render 'form', :comment => @comment
+- model_class = StoryComment
+.page-header
+  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
+= render "form", :comment => @comment
