--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -1,3 +1,14 @@
+- if @story.errors.any?
+  %div.alert.alert-error
+    %a.close{ 'data-dismiss' => 'alert'}
+    %strong
+      = pluralize(@story.errors.count, "error") + ' prohibited this post from being saved:'
+    %ul
+      - @story.errors.full_messages.each do |msg|
+        %li
+          =msg
+
+
 = form_for @story, :html => { :class => 'form-horizontal' } do |f|
   .control-group
     = f.label :title, :class => 'control-label'
