--- a/app/views/story_comments/_form.html.haml
+++ b/app/views/story_comments/_form.html.haml
@@ -1,3 +1,13 @@
+- if comment.errors.any?
+  %div.alert.alert-error
+    %a.close{ 'data-dismiss' => 'alert'}
+    %strong
+      = pluralize(comment.errors.count, "error") + ' prohibited this comment from being saved:'
+    %ul
+      - comment.errors.full_messages.each do |msg|
+        %li
+          =msg
+
 = form_for comment, :html => { :class => '' } do |f|
   .control-group
     .controls
