--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -9,22 +9,18 @@
           =msg
 
 
-= form_for @story, :html => { :class => 'form-horizontal' } do |f|
+= simple_form_for @story, :html => { :class => 'form-horizontal' } do |f|
   .control-group
-    = f.label :title, :class => 'control-label'
-    .controls
-      = f.text_field :title, :class => 'text_field'
-  .control-group
-    = f.label :body, :class => 'control-label'
-    .controls
-      = f.text_area :body, :class => 'text_field'
-  .control-group
-    = f.label :performer_id, :class => 'control-label'
-    .controls
-      = f.select :performer_id, User.all.map{|u| [u.email, u.id]}, :include_blank => true
+    = f.input :title, input_html: { :class => 'text_field' }
 
-  = f.hidden_field :author_id, :value => current_user.id
+  .control-group
+    = f.input :body, input_html: { :class => 'text_field' }
+
+  .control-group
+    = f.input :performer_id, collection: User.all.map{|u| [u.email, u.id]}
+
+  = f.input :author_id, :as => :hidden, :input_html => { :value => current_user.id }
 
   .form-actions
-    = f.submit nil, :class => 'btn btn-primary'
+    = f.button :submit, { :class => 'btn btn-primary' }
     = link_to t('.cancel', :default => t("helpers.links.cancel")), stories_path, :class => 'btn'
