--- a/app/views/story_comments/_form.html.haml
+++ b/app/views/story_comments/_form.html.haml
@@ -8,14 +8,14 @@
         %li
           =msg
 
-= form_for comment, :html => { :class => '' } do |f|
+= simple_form_for comment do |f|
   .control-group
     .controls
-      = f.text_area :body, :class => 'text_field'
+      = f.input :body, input_html: { :class => 'text_field' }
 
-  = f.hidden_field :author_id, :value => current_user.id
-  = f.hidden_field :story_id, :value => comment.story_id
+  = f.input :author_id, :as => :hidden, input_html: { :value => current_user.id }
+  = f.input :story_id,  :as => :hidden, input_html: { :value => comment.story_id }
 
   .form-actions
-    = f.submit 'Save', :class => 'btn btn-primary'
+    = f.button :submit, { :class => 'btn btn-primary' }
     = link_to t('.cancel', :default => t("helpers.links.cancel")), story_path(comment.story), :class => 'btn'
